--- a/Documents/SUNNU_MBAYE_MI/docker-compose.yml
+++ b/Documents/SUNNU_MBAYE_MI/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "3.8"
+
 services:
   database:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: ""
-      MYSQL_DATABASE: SUNU_MBAYE_MI
-   
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
     ports:
       - "3306:3306"
     networks:
@@ -13,12 +12,12 @@ services:
 
   phpmyadmin:
     image: phpmyadmin
-    container_name: phpmyadmin_docker_laravel
+    container_name: phpmyadmin_docker_symfony
     restart: always
     depends_on:
       - database
     ports:
-      - 8083:80
+      - "8080:80"
     environment:
       PMA_HOST: database
     networks:
@@ -26,19 +25,19 @@ services:
 
   maildev:
     image: maildev/maildev
-    container_name: maildev_docker_laravel
+    container_name: maildev_docker_symfony
     command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
     ports:
-      - "8082:80"
+      - "8081:80"
     restart: always
     networks:
       - dev
 
   www:
     build: php
-    container_name: www_docker_laravel
+    container_name: www_sunu_mbay
     ports:
-      - "8092:80"
+      - "8091:80"
     volumes:
       - ./php/vhosts:/etc/apache2/sites-enabled
       - ./:/var/www/html
