--- a/Documents/SUNNU_MBAYE_MI/php/Dockerfile
+++ b/Documents/SUNNU_MBAYE_MI/php/Dockerfile
@@ -1,5 +1,5 @@
-# Utilise ici une image PHP avec Apache
-FROM php:8.1-apache
+# Utilise une image PHP avec Apache
+FROM php:8.2-apache
 
 # Installe les dépendances nécessaires
 RUN apt-get update && \
@@ -10,21 +10,22 @@ RUN apt-get update && \
     unzip \
     && docker-php-ext-install -j$(nproc) intl pdo_mysql zip
 
-# Configure apache
+# Configure Apache
 RUN a2enmod rewrite && \
     service apache2 restart
 
 RUN echo "DocumentRoot /var/www/html/public" >> /etc/apache2/apache2.conf
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
-# Définir le répertoire de travail
+
+# Définit le répertoire de travail
 WORKDIR /var/www/html
 
-# Copier les fichiers de l'application dans le conteneur
+# Copie les fichiers de l'application dans le conteneur
 COPY . .
 
-# Installer les dépendances Symfony
-RUN curl -sSkk https://getcomposer.org/installer | php -- --disable-tls
-RUN mv    composer.phar /usr/local/bin/composer
+# Installe les dépendances Symfony
+RUN curl -sS https://getcomposer.org/installer | php -- --disable-tls
+RUN mv composer.phar /usr/local/bin/composer
 
 # Expose le port 80
 EXPOSE 80
