--- a/Documents/SUNNU_MBAYE_MI/docker-compose.yml
+++ b/Documents/SUNNU_MBAYE_MI/docker-compose.yml
@@ -1,28 +1,45 @@
 version: "3.8"
-
 services:
-  database:
-    image: mysql:5.7
+  # Mysql database container
+  db:
+    image: mysql
+    container_name: mysql_Don_Echange
+    restart: always
+    volumes:
+      - db-data:/var/lib/mysql
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    ports:
-      - "3306:3306"
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     networks:
-      - dev
+      - tutorial
 
+  # phpmyadmin container
   phpmyadmin:
     image: phpmyadmin
-    container_name: phpmyadmin_docker_symfony
+    container_name: phpmyadmin_Don_Echange
     restart: always
     depends_on:
-      - database
+      - db
     ports:
-      - "8080:80"
+      - 8010:80
     environment:
-      PMA_HOST: database
+      PMA_HOST: db
     networks:
-      - dev
+      - tutorial
 
+  # Symfony apache project container
+  www:
+    build: docker/php
+    container_name: Don_Echange
+    ports:
+      - "8002:80"
+    volumes:
+      - ./docker/php/vhosts:/etc/apache2/sites-enabled
+      - ./:/var/www/html
+    restart: always
+    networks:
+      - tutorial
+
+  # Maildev container
   maildev:
     image: maildev/maildev
     container_name: maildev_docker_symfony
@@ -31,19 +48,10 @@ services:
       - "8081:80"
     restart: always
     networks:
-      - dev
-
-  www:
-    build: php
-    container_name: www_sunu_mbay
-    ports:
-      - "8091:80"
-    volumes:
-      - ./php/vhosts:/etc/apache2/sites-enabled
-      - ./:/var/www/html
-    restart: always
-    networks:
-      - dev
+      - tutorial
 
 networks:
-  dev:
+  tutorial:
+
+volumes:
+  db-data:
