--- a/Documents/SUNNU_MBAYE_MI/docker-compose.yml
+++ b/Documents/SUNNU_MBAYE_MI/docker-compose.yml
@@ -1,57 +1,48 @@
 version: "3.8"
 services:
-  # Mysql database container
-  db:
-    image: mysql
-    container_name: mysql_Don_Echange
-    restart: always
-    volumes:
-      - db-data:/var/lib/mysql
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-    networks:
-      - tutorial
+    # Mysql database container
+    db:
+        image: mysql
+        container_name: certification_simplon
+        restart: always
+        volumes:
+            - db-data:/var/lib/mysql
+        environment:
+            MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+        ports:
+            - '3306'
+        networks:
+            - tutorial
 
-  # phpmyadmin container
-  phpmyadmin:
-    image: phpmyadmin
-    container_name: phpmyadmin_Don_Echange
-    restart: always
-    depends_on:
-      - db
-    ports:
-      - 8010:80
-    environment:
-      PMA_HOST: db
-    networks:
-      - tutorial
+    # phpmyadmin container
+    phpmyadmin:
+        image: phpmyadmin
+        container_name: certification_simplon1
+        restart: always
+        depends_on:
+            - db
+        ports:
+            - 8080:80
+        environment:
+            PMA_HOST: db
+        networks:
+            - tutorial
 
-  # Symfony apache project container
-  www:
-    build: docker/php
-    container_name: Don_Echange
-    ports:
-      - "8002:80"
-    volumes:
-      - ./docker/php/vhosts:/etc/apache2/sites-enabled
-      - ./:/var/www/html
-    restart: always
-    networks:
-      - tutorial
-
-  # Maildev container
-  maildev:
-    image: maildev/maildev
-    container_name: maildev_docker_symfony
-    command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
-    ports:
-      - "8081:80"
-    restart: always
-    networks:
-      - tutorial
+    # laravel apache project container
+    www:
+        build: docker/php
+        container_name: certification_simplon2
+        ports:
+          - "8741:80"
+        volumes:
+            - ./docker/php/vhosts:/etc/apache2/sites-enabled
+            - ./:/var/www/html
+        restart: always
+        networks:
+            - tutorial
 
 networks:
-  tutorial:
+    tutorial:
 
 volumes:
-  db-data:
+    db-data:
