--- a/Documents/SUNNU_MBAYE_MI/.env.example
+++ b/Documents/SUNNU_MBAYE_MI/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=database
 DB_PORT=3306
-DB_DATABASE=SUNU_MBAYE_MI
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
